[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "leaderboard-caballeros"
description = "Sistema de Gamificaci칩n y Tracking para Noches de Juegos de Mesa"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"

authors = [
    {name = "VexxAl", email = "valentinalderete19@gmail.com"}
]

dependencies = [
    "pandas>=2.3.3",
    "pg8000>=1.31.5",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.2",
]

# Esto permite leer la versi칩n desde Git
[tool.hatch.version]
source = "vcs"

# Explicitamos que el c칩digo est치 en "app"
[tool.hatch.build.targets.wheel]
packages = ["app"]